--- a/Web-Programming/Notes/1.html
+++ b/Web-Programming/Notes/1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--The above declaration must always be the first line in an HTML document, and it tells <thead>
+<!--The above declaration must always be the first line in an HTML document, and it tells the
   browser what type of document to expect along with the version of HTML. The standard html parameter
   means that the document is reffering to the current HTML standard, HTML 5. -->
 
