--- a/Web-Programming/Notes/3.html
+++ b/Web-Programming/Notes/3.html
@@ -25,9 +25,9 @@
             <!--The relative position of each tr tag specifies that row on the table. -->
             <tr>
                <!-- The relative position of each th tag corresponds to an element in each row. -->
-               <th scope="col">Company Name</th>
-               <th scope="col">Numbers of Items to Ship</th>
-               <th scope="col">Next Action</th>
+               <th>Company Name</th>
+               <th>Numbers of Items to Ship</th>
+               <th>Next Action</th>
                <!-- The scope attributes specifies whether the header is for the row or column it is in. -->
             </tr>
          </thead>
