--- a/Web-Programming/Notes/4.html
+++ b/Web-Programming/Notes/4.html
@@ -34,7 +34,7 @@ DEFINTIONS:
   </head>
 
   <!--The script tag can be placed on the top of the document with the defer attribute.
-      The script will then load after the page has been loaded. -->
+      The script will only start parsing once it has been loaded, pausing HTML until it is complete. -->
   <script src="example.js" defer></script> <!--script tag info at bottom of document -->
 
   <!--The script tag can also have the async attribute. While the deferred script will load
