--- a/Web-Programming/Notes/4.html
+++ b/Web-Programming/Notes/4.html
@@ -22,7 +22,7 @@ DEFINTIONS:
     <!--The link element can be used to link necessary documents to an HTML file. In
         most cases it is better to have the CSS in a separate .css file, which needs
         to be linked to the current CSS document. -->
-    <link href="./example.css" rel="stylesheet">
+    <link href="./example.css" type="text/css" rel="stylesheet">
     <!--The href attribute gets the path to the file, while the rel attribute describes
         what type of file it is. -->
 
