Added more detail.

--- a/Web-Programming/Notes/2.html
+++ b/Web-Programming/Notes/2.html
@@ -36,5 +36,8 @@ DEFINITIONS:
 
     <!--It is possible to traverse across a page by referencing to elements of interest. -->
     <a href="#top"> Back to top.</a> <!-- Goes to the element that has an id of top, which is the body element. -->
+
+    <!--The # symbol represents a dead link. -->
+    <a href="#">Need to insert link.</a>
   </body>
 </html>
