--- a/Web-Programming/Notes/1.html
+++ b/Web-Programming/Notes/1.html
@@ -8,7 +8,7 @@ DEFINITIONS:
 
 	- Markup Langauge: A computer language that defines the structure and presentation of raw text
 
-	- HTML: A language that interprets and formats raw text.
+	- HTML: A markup language that interprets and formats raw text.
 
   	- HTML Element: A unit of content formed by a pair HTML tags and the text or media contained within.
     		- EX: <p>I am the content!</p>
@@ -26,47 +26,51 @@ DEFINITIONS:
 <html>
   <!--The body tag contains all the content that will be displayed to the screen -->
   <body>
-    <!--The heading tag contains content that serves as a title or subtitle -->
-    <h1>Largest</h1> <!-- This is the main header that is used for the title. -->
-    <h2>Smaller</h2> <!-- The rest of these headers should only be used as subtitles -->
-    <h3>Smaller</h3>
-    <h4>Smaller</h4>
-    <h5>Smaller</h5>
-    <h6>Smallest</h6> <!-- This is the smallest header available -->
+    <!--The main tag contains the non-repeating content between a set of pages.
+        Elements such as the navigation bar will be repeated between pages.--> 
+    <main>
+      <!--The heading tag contains content that serves as a title or subtitle -->
+      <h1>Largest</h1> <!-- This is the main header that is used for the title. -->
+      <h2>Smaller</h2> <!-- The rest of these headers should only be used as subtitles -->
+      <h3>Smaller</h3>
+      <h4>Smaller</h4>
+      <h5>Smaller</h5>
+      <h6>Smallest</h6> <!-- This is the smallest header available -->
 
-    <!--The div element simply groups together certain elements under the same tag. This is
-        very helpful when using languages such as CSS and Javascript that depend on the HTML. -->
-    <div id="Formatting Plaintext">
-      <!--The paragraph (p) element contains a block of plain text to be displayed.-->
-      <p>I am the child of the div element. The div element is my parent element</p>
+      <!--The div element simply groups together certain elements under the same tag. This is
+          very helpful when using languages such as CSS and Javascript that depend on the HTML. -->
+      <div id="Formatting Plaintext">
+        <!--The paragraph (p) element contains a block of plain text to be displayed.-->
+        <p>I am the child of the div element. The div element is my parent element</p>
 
-      <!--While the div element groups together elements, the span element groups together
-          inline content, or content that is in the same line as other text. -->
-      <p> I'm not separated. <span>But I am</span><p>
+        <!--While the div element groups together elements, the span element groups together
+            inline content, or content that is in the same line as other text. -->
+        <p> I'm not separated. <span>But I am</span><p>
 
-      <!--The em element will italicize content, while the strong element will bold it. -->
-      <p><em>Italicized text!</em> <strong>Bolded text!</strong><p>
+        <!--The em element will italicize content, while the strong element will bold it. -->
+        <p><em>Italicized text!</em> <strong>Bolded text!</strong><p>
 
-      <!--The break element inserts a newline character. -->
-      <p>This is on one line..<br>but this is on another!</p>
-    </div>
+        <!--The break element inserts a newline character. -->
+        <p>This is on one line..<br>but this is on another!</p>
+      </div>
 
-    <div id="Images & Videos">
-      <!--To place an image, use the image tag, img. -->
-      <img src="https://www.publicdomainpictures.net/pictures/130000/velka/multi-color-pattern-background.jpg"/>
-      <!--The image tag is self closing as it doesn't require a closing tag. -->
+      <div id="Images & Videos">
+        <!--To place an image, use the image tag, img. -->
+        <img src="https://www.publicdomainpictures.net/pictures/130000/velka/multi-color-pattern-background.jpg"/>
+        <!--The image tag is self closing as it doesn't require a closing tag. -->
 
-      <!--In case an image doesn't load or is to be read by browsers made for the visually impared,
-          the alt attribute provides a short description of the image. -->
-      <img src="#" alt="A gradient of colors ranging from green to red."/>
+        <!--In case an image doesn't load or is to be read by browsers made for the visually impared,
+            the alt attribute provides a short description of the image. -->
+        <img src="#" alt="A gradient of colors ranging from green to red."/>
 
-      <!--Videos can also be displayed by using the video element. -->
-      <video src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4"
-      width="320" height="240" controls>
-        Video not supported.
-      </video>
-      <!--The controls attribute provides basic controls to the video. If the video
-          doesn't load, the content within the tags is displayed -->
-    </div>
+        <!--Videos can also be displayed by using the video element. -->
+        <video src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4"
+        width="320" height="240" controls>
+          Video not supported.
+        </video>
+        <!--The controls attribute provides basic controls to the video. If the video
+            doesn't load, the content within the tags is displayed -->
+      </div>
+    </main>
   </body>
 </html>
