--- a/Web-Programming/Notes/1.html
+++ b/Web-Programming/Notes/1.html
@@ -27,7 +27,7 @@ DEFINITIONS:
   <!--The body tag contains all the content that will be displayed to the screen -->
   <body>
     <!--The main tag contains the non-repeating content between a set of pages.
-        Elements such as the navigation bar will be repeated between pages.--> 
+        Elements such as the navigation bar will be repeated between pages.-->
     <main>
       <!--The heading tag contains content that serves as a title or subtitle -->
       <h1>Largest</h1> <!-- This is the main header that is used for the title. -->
@@ -47,8 +47,14 @@ DEFINITIONS:
             inline content, or content that is in the same line as other text. -->
         <p> I'm not separated. <span>But I am</span><p>
 
-        <!--The em element will italicize content, while the strong element will bold it. -->
-        <p><em>Italicized text!</em> <strong>Bolded text!</strong><p>
+        <!--There are many inline style tags. <hr> inserts a horizontal line across the page. -->
+        <p>
+          <em>Italicized text!</em>
+          <strong>Bolded text!</strong>
+          <u>Underlined text!</u>
+          <s>Struckthrough text!</s>
+          <hr>
+        <p>
 
         <!--The break element inserts a newline character. -->
         <p>This is on one line..<br>but this is on another!</p>
