--- a/Web-Programming/Notes/8.html
+++ b/Web-Programming/Notes/8.html
@@ -7,6 +7,9 @@
           is used to display text when the user hasn't inputted anything. -->
       <input type='text' placeholder='Placeholder Text'>
 
+      <!--Text inputs can have default text values, set with the value property. -->
+      <input type='text' value="Default Text">
+
       <!--Radio buttons can be created with an input type of radio. Each button
           must have the same name to be part of the same input group. The input
           tag is within labels so that clicking on the input text is also works.-->
@@ -21,6 +24,9 @@
       <label><input type='checkbox' name='checkbox_button'>2</label>
       <!--The 'default' attribute automatically checks a button. -->
       <label><input type='checkbox' name='checkbox_button' default>3</label>
+
+      <!--Input values can also be disabled with the 'disabled' keyword: -->
+      <input type='text' disabled>
 
       <!--A form submit button can be created as follows: -->
       <button type='submit'>Complete</button>
