--- a/Web-Programming/Notes/4.html
+++ b/Web-Programming/Notes/4.html
@@ -55,7 +55,10 @@ DEFINTIONS:
   </script>
 
   <!--Scripts can also be linked to the document after the HTML to prevent 
-      loading problems. Works like defer. -->
+      loading problems. Works like the defer attribute. -->
   <script src="./example.js"></script>
+
+  <!--To give a message to people who have JS disabled or have browsers without JS support: -->
+  <noscript>Please enable JS in your browser.</noscript>
 
 </html>
